# franka-whack-a-mole

./: .gitignore  LICENSE  README.md  build_moles.ino  build_molesv2.ino  citations.txt  frames_2024-12-09_10.28.08.gv  frames_2024-12-09_10.31.22.gv  install_pyfirmata  logs  ros495_final_hammer.ino  serial_communication.ino
arduino_codes/: build_moles.ino  decide_which_mole.ino  servo_serial_communication.ino
aros2duino/aros2duino/: test_writing.py
cad/: new-servo-adaptor.gcode
whack_a_mole/: package.xml  setup.cfg  setup.py
whack_a_mole/config/: moveit.rviz  params.yaml  tags.yaml  tags_tf.rviz
whack_a_mole/launch/: camera.launch.py  github_camera.launch.py  planner_swing.launch.xml
whack_a_mole/test/: test_camera_node.py  test_cv.py  test_game.py  test_hint.py  test_serial_comm.py
whack_a_mole/whack_a_mole/: arduino_hint.py  camera.py  constants.py  game.py  mole_detection.py  serial_comm.py  swing.py
whack_a_mole_interfaces/: CMakeLists.txt  package.xml
whack_a_mole_interfaces/action/: ActuateServo.action
whack_a_mole_interfaces/srv/: TargetFrame.srv
