<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whack_a_mole</name>
  <version>1.0.0</version>
  <description>Making Franka play whack a mole</description>
  <maintainer email="pushkar@u.northwestern.edu">PushkarDave</maintainer>
  <license>MIT</license>

  <depend>std_msgs</depend>
  <exec_depend>object_mover</exec_depend>
  <exec_depend>object_mover_interfaces</exec_depend>
  <exec_depend>whack_a_mole_interfaces</exec_depend>
  <build_depend>whack_a_mole_interfaces</build_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>object_mover_interfaces</test_depend>
  <test_depend>whack_a_mole_interfaces</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
